--- a/components/configs/acm/base/PlacementRule/acs-secured-cluster-placement.yaml
+++ b/components/configs/acm/base/PlacementRule/acs-secured-cluster-placement.yaml
@@ -9,7 +9,7 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: acs
+      - key: acs-secured
         operator: In
         values:
-        - secured
+        - 'true'
