--- a/components/apps/acs-secured-cluster/base/init-bundle-setup-job.yaml
+++ b/components/apps/acs-secured-cluster/base/init-bundle-setup-job.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     run: init-bundle-setup-job
   name: init-bundle-setup-job
-  namespace: stackrox
+  namespace: rhacs-operator
 spec:
   template:
     spec:
@@ -27,10 +27,10 @@ spec:
               chmod +x roxctl			  
               acs_credentials="its4uITS4U2023"
               export ROX_CENTRAL_ADDRESS="central-rhacs-operator.apps.ocp-lab2.its4u.eu:443"   
-              secured_cluster_name=$(oc -n stackrox get secret acs-secured-cluster-name-secret -o go-template='{{index .data "acs-cluster-name" | base64decode}}')           
+              secured_cluster_name=$(oc -n rhacs-operator get secret acs-secured-cluster-name-secret -o go-template='{{index .data "acs-cluster-name" | base64decode}}')           
               export ROX_API_TOKEN=$(curl -sk -u "admin:$acs_credentials" "https://$ROX_CENTRAL_ADDRESS/v1/apitokens/generate" -d '{"name":"token name", "role": "Admin"}' | jq -r '.token')
               ./roxctl --insecure-skip-tls-verify -e "$ROX_CENTRAL_ADDRESS" central init-bundles generate $secured_cluster_name --output-secrets cluster_init_bundle.yaml
-              oc apply -f cluster_init_bundle.yaml -n stackrox
+              oc apply -f cluster_init_bundle.yaml -n rhacs-operator
           imagePullPolicy: IfNotPresent
           name: init-bundle-setup-job
       dnsPolicy: ClusterFirst
