--- a/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
+++ b/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
@@ -215,7 +215,7 @@ spec:
                         key: node-role.kubernetes.io/infra
                         value: ''
           remediationAction: inform
-          severity: highµ
+          severity: high
 
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
