--- a/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
+++ b/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
@@ -153,7 +153,7 @@ spec:
                     tolerations:
                       - effect: NoSchedule
                         key: node-role.kubernetes.io/infra
-                        value: 
+                        value: ''
                     timeoutSeconds: 20
                     listenOnEvents: true
                   auditLogs:
