--- a/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
+++ b/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
@@ -16,6 +16,22 @@ spec:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
+          name: acm-secured-operator-ns
+        spec:
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: v1
+                kind: Namespace
+                metadata:
+                  name: rhacs-operator
+          remediationAction: inform
+          severity: high
+
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
           name: acs-secured-rhacs-operator-group
         spec:
           object-templates:
