--- a/components/configs/acm/base/policies/policy-managed-acs-central-cluster.yaml
+++ b/components/configs/acm/base/policies/policy-managed-acs-central-cluster.yaml
@@ -102,8 +102,8 @@ spec:
                 metadata:
                   namespace: rhacs-operator
                   name: acs-central-password
-                stringData:
-                  password: its4uITS4U2023
+                data:
+                  password: aXRzNHVJVFM0VTIwMjM=
           remediationAction: inform
           severity: high
 
