--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -14,6 +14,8 @@ default:
 applications:
 
  auth-branding:
+   enableAutoSync: false
+   autoSyncPrune: true
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous
    source:
