--- a/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
@@ -114,6 +114,10 @@ spec:
                           server:
                             insecure: true
                           kustomizeBuildOptions: '--enable-helm'
+                          dex:
+                            openShiftOAuth: true
+                            groups:
+                              - default
                           rbac:
                             policy: |
                               g, system:cluster-admins, role:admin
