--- a/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
@@ -119,7 +119,7 @@ spec:
                             dex:
                               openShiftOAuth: true
                               groups:
-                                - default
+                                - OCP_Admins
                           rbac:
                             policy: |
                               g, system:cluster-admins, role:admin
