--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -40,6 +40,15 @@ applications:
    source:
      path: components/configs/acm/base
 
+ dev-tools:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/dev-tools/overlays/default
+
+
 # alertmanager:
 #   annotations:
 #     argocd.argoproj.io/compare-options: IgnoreExtraneous
