disable autosync auth

--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -14,7 +14,7 @@ default:
 applications:
 
  auth-branding:
-   enableAutoSync: true
+   enableAutoSync: false
    autoSyncPrune: true
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous
