--- a/clusters/its4u-lab/apps/banner/overlays/home-banner.yaml
+++ b/clusters/its4u-lab/apps/banner/overlays/home-banner.yaml
@@ -1,7 +1,7 @@
 apiVersion: console.openshift.io/v1
 kind: ConsoleNotification
 metadata:
-  name: banner
+  name: home-banner
 spec:
   text: "ITS4U - lab"
   color: '#fff'
