Patch web-terminal policy to inform

--- a/components/configs/acm/base/policies/policy-managed-openshift-terminal-operator.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-terminal-operator.yaml
@@ -52,6 +52,6 @@ spec:
                   phase: Succeeded
           remediationAction: inform
           severity: high
-  remediationAction: enforce
+  remediationAction: inform
 ---
 
