Patch pipeline operator channel latest

--- a/components/configs/acm/base/policies/policy-managed-pipeline-operator.yaml
+++ b/components/configs/acm/base/policies/policy-managed-pipeline-operator.yaml
@@ -27,7 +27,7 @@ spec:
                   namespace: openshift-operators
                 spec:
                   name: openshift-pipelines-operator-rh
-                  channel: pipelines-1.8
+                  channel: latest
                   installPlanApproval: Automatic
                   source: redhat-operators
                   sourceNamespace: openshift-marketplace
