Ignore Extraneous on custom logo & openid secret

--- a/clusters/its4u-lab/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
+++ b/clusters/its4u-lab/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
@@ -3,5 +3,7 @@ apiVersion: v1
 metadata:
   name: openid-client-secret-its4u
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 data:
   clientSecret: ZmFiZjJlZjAtM2FlZS00ZWVkLWE3ODctMjZlNTk1OGQ5YTYy
