--- a/clusters/its4u-lab2/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
+++ b/clusters/its4u-lab2/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 metadata:
   name: openid-client-secret-tltvc
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 data:
   clientSecret: ODIxMjhkN2YtMTVjOS00M2QxLWJkNTgtMmEwYTA3OWU3M2Ey
 type: Opaque
