--- a/clusters/its4u/apps/its4u-auth/base/openid-client-secret-its4u.yaml
+++ b/clusters/its4u/apps/its4u-auth/base/openid-client-secret-its4u.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 metadata:
   name: openid-client-secret-its4u
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 data:
   clientSecret: ZmFiZjJlZjAtM2FlZS00ZWVkLWE3ODctMjZlNTk1OGQ5YTYy
 type: Opaque
