Test with svg logo

--- a/clusters/its4u/apps/its4u-auth/base/patch-custom-logo.yaml
+++ b/clusters/its4u/apps/its4u-auth/base/patch-custom-logo.yaml
@@ -11,7 +11,7 @@ spec:
           customization:
             customLogoFile:
             
-              key: ocp.its4u.eu.png
+              key: ocp.its4u.eu.svg
               name: console-custom-logo
             customProductName: OCP Console
       patchType: application/merge-patch+json
