Transition to SVG for all cluster

--- a/clusters/its4u/apps/its4u-auth/base/console-custom-logo.yaml
+++ b/clusters/its4u/apps/its4u-auth/base/console-custom-logo.yaml
@@ -7,7 +7,7 @@ metadata:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
 binaryData:
 data:
-  ocp.its4u.eu.svg: |
+  cluster-logo.svg: |
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
