--- a/clusters/its4u-lab2/apps/its4u-auth/base/patch-custom-logo.yaml
+++ b/clusters/its4u-lab2/apps/its4u-auth/base/patch-custom-logo.yaml
@@ -10,7 +10,7 @@ spec:
         spec:
           customization:
             customLogoFile:
-              key: LOGO_ITS4U_Group.png
+              key: cluster-logo.svg
               name: console-custom-logo
             customProductName: LAB2 Console
       patchType: application/merge-patch+json
