--- a/clusters/its4u-lab/apps/its4u-auth/base/console-custom-logo.yaml
+++ b/clusters/its4u-lab/apps/its4u-auth/base/console-custom-logo.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-config
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
-binaryData:
+data:
   cluster-logo.svg: |
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <!-- Created with Inkscape (http://www.inkscape.org/) -->
