--- a/clusters/its4u-lab2/apps/its4u-auth/base/login-template-secret.yaml
+++ b/clusters/its4u-lab2/apps/its4u-auth/base/login-template-secret.yaml
@@ -5,4 +5,6 @@ kind: Secret
 metadata:
   name: login-template
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 type: Opaque
