--- a/clusters/its4u/apps/its4u-auth/base/error-template-secret.yaml
+++ b/clusters/its4u/apps/its4u-auth/base/error-template-secret.yaml
@@ -5,4 +5,6 @@ kind: Secret
 metadata:
   name: error-template 
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 type: Opaque
