add recursion folder

--- a/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
@@ -153,6 +153,9 @@ spec:
                     path: clusters/{{ fromClusterClaim "gitops" }}/argocd/bootstrap
                     repoURL: https://github.com/kevbrain/cluster-config.git
                     targetRevision: main
+                    directory:
+                      recurse: true
+                      jsonnet: {}
                   syncPolicy:
                     automated:
                       prune: false
