--- a/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
@@ -154,8 +154,7 @@ spec:
                     repoURL: https://github.com/kevbrain/cluster-config.git
                     targetRevision: main
                     directory:
-                      recurse: true
-                      jsonnet: {}
+                      recurse: false
                   syncPolicy:
                     automated:
                       prune: false
