--- a/components/configs/acm/base/policies/policy-patch-registry-as-managed.yaml
+++ b/components/configs/acm/base/policies/policy-patch-registry-as-managed.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     policy.open-cluster-management.io/categories: CM Configuration Management, CA Security Assessment and Authorization
 spec:
-  disabled: false
+  disabled: true
   policy-templates:
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
