--- a/components/configs/acm/base/policies/policy-managed-pipeline-operator.yaml
+++ b/components/configs/acm/base/policies/policy-managed-pipeline-operator.yaml
@@ -9,7 +9,7 @@ metadata:
       Security Assessments, CA-7 Continuous Monitoring
     policy.open-cluster-management.io/standards: NIST SP 800-53
 spec:
-  disabled: true
+  disabled: false
   policy-templates:
      - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
